--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@
   top: 0;
   right: 0;
 }
+
+span.discount {
+  background-color: green;
+}
+
+.object:nth-child(2) span.discount {
+  background: red;
+}
