--- a/style.css
+++ b/style.css
@@ -39,4 +39,9 @@ span.discount {
   width: 100%;
   padding-bottom: 15px;
   color:transparent;
+  font-size: 25px;
+}
+
+.object:hover .heart {
+  color: red;
 }
