--- a/bonus/style-bonus.css
+++ b/bonus/style-bonus.css
@@ -20,8 +20,7 @@ header, footer {
 
 .container {
   width: 1000px;
-  margin: auto;
-  margin-top: 100px;
+  margin: 100px auto;
 }
 
 .row {
@@ -49,18 +48,31 @@ span.discount {
   background: red;
 }
 
-.heart {
+.over-object {
   position: absolute;
   bottom: 0;
   width: 100%;
   padding-bottom: 15px;
   color:transparent;
-  font-size: 25px;
+}
+
+.heart {
+  font-size: 250px;
+}
+
+.carrello {
+  font-size: 22px;
+  font-family: 'Dancing Script', cursive;
 }
 
 .object:hover .heart {
-  color: red;
+  color: rgba(206, 59, 37, 0.5);
 }
+
+.object:hover .carrello {
+  color: rgb(206, 59, 37);
+}
+
 
 footer {
   font-size: 30px;
